# pipictureframe

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  PictureFrame2021.py  PictureFrame2021config.py  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml
pipictureframe/utils/: Config.py
src/pipictureframe/: pipictureframe.py
src/pipictureframe/pi3dfuncs/: __init__.py
src/pipictureframe/picdb/: Database.py  DbObjects.py
src/pipictureframe/utils/: Config.py  NextPictureManager.py  PictureReader.py
tests/: mocks.py  pictures.py  temp_db_manager.py  test_config.py  test_database_migrator.py  test_db_objects.py  test_next_picture_manager.py  test_no_gui.py  test_picture_hash.py  test_picture_reader.py  test_picture_updater.py  test_slide_loading.py  test_sqlite_concurrency.py
